# sentiment-analysis

./: .gitignore  00_data_cleaning.ipynb  01_pipeline_setup_and_ingest.ipynb  02_model_training_loop.ipynb  03_daily_operations.ipynb  ARCHITECTURE.md  DATA_SPEC.md  Dockerfile  README.md  Simulate_Human.ipynb  app.py  config.py  env.example  pyproject.toml  requirements.txt
